# zkdtvm-wasm-stark-verifier

./: .gitignore  Cargo.toml  README-dev.md  README.md  package-lock.json  package.json  serve.mjs  test-node.mjs  verify-node.mjs
demo/: app.html  verify-worker.mjs
fixtures/: index.json
pkg/: dt_wasm_verifier_bg.js  dt_wasm_verifier_bg.wasm  dt_wasm_verifier_bg.wasm.d.ts  package.json  zkdtvm_wasm_stark_verifier.d.ts  zkdtvm_wasm_stark_verifier.js
pkg-node/: dt_wasm_verifier.cjs  dt_wasm_verifier.d.ts  dt_wasm_verifier_bg.wasm  package.json  zkdtvm_wasm_stark_verifier.js
pkg-web/: LICENSE  README.md  dt_wasm_verifier.d.ts  dt_wasm_verifier.js  dt_wasm_verifier_bg.wasm  package.json  zkdtvm_wasm_stark_verifier.d.ts  zkdtvm_wasm_stark_verifier.js
scripts/: serve.mjs  verify_node.mjs
src/: lib.rs
web/: app.html
