[package]
name = "dt-wasm-verifier"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for zkdtvm compressed proof verification (zkdtvm-stark-verifier)"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Open-source verifier backend. Adapted to zkdtvm v0.6.3.
# Repo: https://github.com/AntChainOpenLabs/zkdtvm-stark-verifier
zkdtvm-stark-verifier = { git = "https://github.com/AntChainOpenLabs/zkdtvm-stark-verifier.git", tag = "v0.6.3", default-features = true }
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"

# Force `getrandom` to enable the `js` feature on wasm32. Without this, transitive
# dependencies pull in `getrandom` without the web-compatible backend and the build
# fails on wasm32-unknown-unknown.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Speed over wasm size: faster in-browser verify (often noticeably vs opt-level "s" + -Oz).
[profile.release]
opt-level = 3
codegen-units = 1
lto = true

# wasm-pack: favor runtime speed over minimal binary size.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
